# ccn-proj

./: .gitignore  README.md  debug_sim.py  demo.py  main.py  package-lock.json  quick_rl_test.py  quick_test.py  requirements.txt  run_rl.py  test_env.py  test_rl.py  train_pytorch.py
.github/workflows/: deploy_app.yml  deploy_train.yml
backend/: Dockerfile.app  Dockerfile.train  main.py  pyproject.toml  requirements.txt  write_main.py
backend/src/app/: main.py  train_main.py
backend/src/app/api/: routes.py
backend/src/app/core/: config.py  state.py
backend/src/app/models/: schemas.py
backend/src/app/rl/: __init__.py  train.py
backend/src/app/simulation/: engine.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
rl/: benchmark.py  train_full.py  train_rl.py
src/: __init__.py  animation.py  config.py  graph.py  osm_parser.py  physics.py  real_network.py  rl_env.py  router.py  simulator.py  uxsim_env.py  vehicle.py  visual_network.py
